--- a/sample-viewer/src/app/filters/filter-location/filter-location.component.html
+++ b/sample-viewer/src/app/filters/filter-location/filter-location.component.html
@@ -2,7 +2,7 @@
   <h4 class="filter-label">location</h4>
 
   <div *ngFor="let ctry of countries" (click)="selectCountry(ctry.term)" class="location mat-shadow" [ngClass]="ctry.term">
-    <div class="container country-container" [ngClass]="{'disabled': ctry.count === 0}">
+    <div class="container country-container" [ngClass]="{'disabled': ctry.disabled}">
       <svg-icon [icon]="ctry.term" [class]="'country-icon ' + ctry.term + '-icon'" *ngIf="ctry.term && ctry.term !== 'unknown' && ctry.term !== 'Unknown'"></svg-icon>
       <mat-icon *ngIf="!ctry.term || ctry.term === 'unknown' || ctry.term === 'Unknown'" class="unknown-icon">help_outline</mat-icon>
 
