--- a/sample-viewer/src/app/dataset-page/dataset-page.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.html
@@ -8,7 +8,7 @@
     <app-dataset-page-nav [id]="dataset.identifier" class="nav dataset-nav"></app-dataset-page-nav>
 
     <div class="dataset-content">
-      <a [routerLink]="'/dataset'" class="back-button">Return to all files</a>
+      <a [routerLink]="'/dataset'" class="back-button">Return to all datasets</a>
 
       <div class="dataset-header" id="summary">
         <h2>
