add patient-page module, lazy loading

--- a/sample-viewer/src/app/hla/allele-circle-packing/allele-circle-packing.component.scss
+++ b/sample-viewer/src/app/hla/allele-circle-packing/allele-circle-packing.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../sass/variables.scss'; // --- General params for all circle packing graphs ---
+@import '../../../sass/variables.scss'; // --- General params for all circle packing graphs ---
 
 .masked {
   opacity: 0.05 !important;
