--- a/sample-viewer/src/app/file-list/file-list.component.scss
+++ b/sample-viewer/src/app/file-list/file-list.component.scss
@@ -1,5 +1,5 @@
-@import '../../../sass/variables.scss';
-@import '../../../sass/material-theme.scss';
+@import '../../sass/variables.scss';
+@import '../../sass/material-theme.scss';
 
 
 // --- Fonts ---
