--- a/sample-viewer/src/app/hla/hla-comparison/hla-comparison.component.scss
+++ b/sample-viewer/src/app/hla/hla-comparison/hla-comparison.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../sass/material-theme.scss';
+@import '../../../sass/material-theme.scss';
 
 .cohort-form {
   display: inline-flex;
