--- a/sample-viewer/src/app/hla/hla-comparison/small-multiple-comparison/small-multiple-comparison.component.scss
+++ b/sample-viewer/src/app/hla/hla-comparison/small-multiple-comparison/small-multiple-comparison.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../sass/variables.scss'; // custom variables, usually colors
+@import '../../../../sass/variables.scss'; // custom variables, usually colors
 
 .small-multiple-container h4 {
   background: lighten($cvisb-dark, 45%);
