--- a/sample-viewer/src/app/hla/hla-comparison/comparison-barplot/comparison-barplot.component.scss
+++ b/sample-viewer/src/app/hla/hla-comparison/comparison-barplot/comparison-barplot.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../../sass/variables.scss';
-@import '../../../../../sass/material-theme.scss';
+@import '../../../../sass/variables.scss';
+@import '../../../../sass/material-theme.scss';
 
 .barplot--comparison .axis--x line,
 .barplot--comparison .axis--x path,
