--- a/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.scss
+++ b/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.scss
@@ -16,3 +16,9 @@
   width: $check-width !important;
   height: $check-width !important;
 }
+
+
+.ng-value-container {
+    max-height: 60px;
+    overflow-y: scroll;
+}
