--- a/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.html
@@ -3,8 +3,16 @@
 
   <div class="container" *ngIf="patients">
     <!-- <input class="patient-ids" /> -->
-    <ng-select #selectpatients class="patient-ids" [multiple]="true" [closeOnSelect]="true" [hideSelected]="true" placeholder="Select patients" (search)="onSearch($event)" (ngModelChange)="filterPatientIDs($event)" [(ngModel)]="selectedPatients">
-    <!-- <ng-select #selectpatients class="patient-ids" [items]="all_patients" [multiple]="true" [closeOnSelect]="true" [hideSelected]="true" placeholder="Select patients" (search)="onSearch($event)" (ngModelChange)="filterPatientIDs($event)" [(ngModel)]="selectedPatients"> -->
+    <ng-select #selectpatients class="patient-ids" [multiple]="true" [closeOnSelect]="true" [items]="loaded_patients" [virtualScroll]="true" [loading]="loading" (scroll)="onScroll($event)" (scrollToEnd)="onScrollToEnd()" [hideSelected]="true"
+      placeholder="Enter patient IDs, comma-separated" (search)="onSearch($event)" (ngModelChange)="filterPatientIDs($event)" [(ngModel)]="selectedPatients">
+      <!-- <ng-select #selectpatients class="patient-ids" [items]="all_patients" [multiple]="true" [closeOnSelect]="true" [hideSelected]="true" placeholder="Select patients" (search)="onSearch($event)" (ngModelChange)="filterPatientIDs($event)" [(ngModel)]="selectedPatients"> -->
+
+      <ng-template ng-header-tmp>
+        <small class="form-text text-muted">Loaded {{loaded_patients.length}} of {{all_patients.length}}</small>
+      </ng-template>
+      <ng-template ng-option-tmp let-item="item" let-index="index">
+        {{item}}
+      </ng-template>
     </ng-select>
     <!-- <mat-checkbox class="include-contacts" [(ngModel)]="inclContacts" (ngModelChange)="filterContacts($event)">include patient contacts</mat-checkbox> -->
   </div>
