--- a/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.html
@@ -4,7 +4,7 @@
   <div class="container" *ngIf="patients">
     <!-- <input class="patient-ids" /> -->
     <ng-select #selectpatients class="patient-ids" [multiple]="true" [closeOnSelect]="true" [items]="loaded_patients" [virtualScroll]="true" [loading]="loading" (scroll)="onScroll($event)" (scrollToEnd)="onScrollToEnd()" [hideSelected]="true"
-      placeholder="Enter comma-separated IDs" (search)="onSearch($event)" (ngModelChange)="filterPatientIDs($event)" [(ngModel)]="selectedPatients">
+      placeholder="Enter comma-separated ID" (search)="onSearch($event)" (ngModelChange)="filterPatientIDs($event)" [(ngModel)]="selectedPatients">
       <!-- <ng-select #selectpatients class="patient-ids" [items]="all_patients" [multiple]="true" [closeOnSelect]="true" [hideSelected]="true" placeholder="Select patients" (search)="onSearch($event)" (ngModelChange)="filterPatientIDs($event)" [(ngModel)]="selectedPatients"> -->
 
       <ng-template ng-header-tmp>
