--- a/sample-viewer/src/app/hla/hla-page.component.html
+++ b/sample-viewer/src/app/hla/hla-page.component.html
@@ -1,3 +1,7 @@
-<app-hla-summary></app-hla-summary>
+<div class="hla-container">
+  <app-dataset-page></app-dataset-page>
 
-<app-hla-comparison></app-hla-comparison>
+  <app-hla-summary></app-hla-summary>
+
+  <app-hla-comparison></app-hla-comparison>
+</div>
