add viral seq module, lazy load

--- a/sample-viewer/src/app/hla/hla-page.component.html
+++ b/sample-viewer/src/app/hla/hla-page.component.html
@@ -1,4 +1,4 @@
-<div class="hla-container">
+<div class="dataset-container hla-container">
   <app-dataset-page></app-dataset-page>
 
   <app-hla-summary></app-hla-summary>
