--- a/sample-viewer/src/app/dataset-page/dataset-page.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.html
@@ -1,7 +1,6 @@
 <div class="container" id="dataset.identifier" *ngIf="dataset && dataset.identifier">
 
-  <div class="dataset-container dataset-page">
-    <!-- <div class="dataset-container dataset-page" *ngIf="dataset"> -->
+  <div class="dataset-page-container">
 
     <app-dataset-page-nav [id]="dataset.identifier" class="nav dataset-nav"></app-dataset-page-nav>
 
