--- a/sample-viewer/src/app/hla/hla-summary/hla-summary.component.html
+++ b/sample-viewer/src/app/hla/hla-summary/hla-summary.component.html
@@ -8,7 +8,9 @@
         <div class="annot--patients">patients sequenced:</div>
       </span>
 
-      <app-filter-patient-type [viruses]="patientTypes" [outcomes]="patientOutcomes" [all_outcomes]="[]" [all_cohorts]="[]" endpoint="none" class="summary-item"></app-filter-patient-type>
+      <app-filter-patient-type [viruses]="patientTypes" [outcomes]="patientOutcomes"
+      [all_outcomes]="[]" [all_cohorts]="[]" [filterable]="false" [horizontal] = "true"
+      endpoint="none" class="summary-item"></app-filter-patient-type>
     </div>
 
   </div>
