--- a/sample-viewer/src/app/patient-page/patient-page.component.scss
+++ b/sample-viewer/src/app/patient-page/patient-page.component.scss
@@ -12,6 +12,7 @@
 .patient-container {
   display: flex;
   flex: 1;
+  min-height: 700px;
 }
 
 .patient-content {
@@ -27,7 +28,6 @@
   // 18+98+27+22-16;
   padding-top: 225px;
   position: fixed;
-  z-index: -1;
   height: 100%;
   top: 0;
   left: 0;
