adj css, troubleshooting

--- a/sample-viewer/src/app/filters/filterable-histogram/filterable-histogram.component.scss
+++ b/sample-viewer/src/app/filters/filterable-histogram/filterable-histogram.component.scss
@@ -76,7 +76,7 @@
 
   .slider-checkbox {
     cursor: pointer;
-    font-size: 1.1em;
+    font-size: 20px;
     dominant-baseline: ideographic;
     fill: $sierraleone-blue;
   }
