--- a/sample-viewer/src/app/home/home.component.html
+++ b/sample-viewer/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <section class="intro container-column">
     <div class="cvisb-container">
       <div class="cvisb-header">
-        <h1 id="cvisb-title">See-Viz-Bee</h1>
+        <h1 id="cvisb-title">CViSB Data</h1>
         <h2 id="cvisb-subtitle">The Data Portal for the Center for Viral Systems Biology</h2>
       </div>
     </div>
