--- a/sample-viewer/src/app/filters/filterable-histogram/filterable-histogram.component.scss
+++ b/sample-viewer/src/app/filters/filterable-histogram/filterable-histogram.component.scss
@@ -79,6 +79,7 @@
     font-size: 20px;
     dominant-baseline: ideographic;
     fill: $sierraleone-blue;
+    text-anchor: middle;
   }
 
   .selected {
