--- a/sample-viewer/src/app/filters/filterable-histogram/filterable-histogram.component.scss
+++ b/sample-viewer/src/app/filters/filterable-histogram/filterable-histogram.component.scss
@@ -75,11 +75,11 @@
   }
 
   .slider-checkbox {
-    cursor: pointer;
-    font-size: 20px;
+    font-size: 1.2em;
     dominant-baseline: ideographic;
     fill: $sierraleone-blue;
     text-anchor: middle;
+    font-family: "Font Awesome 5 Free";
   }
 
   .selected {
