--- a/sample-viewer/src/app/patient-page/patient-demographics/patient-demographics.component.html
+++ b/sample-viewer/src/app/patient-page/patient-demographics/patient-demographics.component.html
@@ -22,8 +22,8 @@
 <div class="country container" [ngClass]="patient.country['name']">
   <span class="variable-label">location:</span>
   <span class="variable-value">
-    <span *ngFor="let area of patient.homeLocation">
-      {{ area['name'] }} {{ area['administrativeType'] }},
+    <span *ngIf="patient.admin2">
+      {{patient.admin2.name}},
     </span> {{ patient.country['name'] }} </span>
 
   <svg-icon [icon]="patient.country['identifier']" class="country-icon" [ngClass]="patient.country['identifier']" *ngIf="patient.country['identifier']"></svg-icon>
