--- a/sample-viewer/src/app/app.component.html
+++ b/sample-viewer/src/app/app.component.html
@@ -2,6 +2,9 @@
   <app-header [links]="links" class="header"></app-header>
 
   <section class="router-outlet">
+    <div class="spinner-container container" *ngIf="loading">
+      <mat-spinner></mat-spinner>
+    </div>
     <router-outlet (activate)="changeRoutes()"></router-outlet>
   </section>
 
