fix links, styling

--- a/sample-viewer/src/app/footer/footer.component.html
+++ b/sample-viewer/src/app/footer/footer.component.html
@@ -4,8 +4,8 @@
 
     <div class="row footer-top">
 
-      <div class="contact-info container-column column">
-        <a routerLink="/about"><h4>CViSB Data Portal Partners</h4></a>
+      <div class="contact-info container">
+        <!-- <a routerLink="/about"><h4>CViSB Data Portal Partners</h4></a> -->
         <a [href]="contactInfo.url" target="_blank" rel="noreferrer">
           <img src="/assets/img/cvisb_icon_300px.png" class="logo" />
         </a>
@@ -18,7 +18,7 @@
       </div>
 
 <!-- NAVIGATION SIDE PANEL -->
-      <div class="column navigation">
+      <!-- <div class="column navigation">
         <h4>Navigation</h4>
 
         <ul>
@@ -29,7 +29,7 @@
           </li>
         </ul>
 
-      </div>
+      </div> -->
 
     </div>
 
