--- a/sample-viewer/src/app/footer/footer.component.scss
+++ b/sample-viewer/src/app/footer/footer.component.scss
@@ -26,8 +26,8 @@ footer {
   }
 
   &.footer-top {
-    padding-top: 55px;
-    padding-bottom: 25px;
+    padding-top: 25px;
+    padding-bottom: 0px;
   }
 }
 
@@ -62,6 +62,8 @@ ul {
 }
 // Address / contact info
 .contact-info {
+  justify-content: space-between;
+  width: 100%;
   .org-name {
     font-weight: 600;
   }
