fix control ref

--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -371,7 +371,7 @@ svg-icon.country-icon {
 }
 
 .cohort.Unknown,
-.cohort.control {
+.cohort.Control {
   background-color: $grey-400;
   color: white;
   border: $grey-600 1px solid;
