--- a/sample-viewer/src/app/home/home.component.html
+++ b/sample-viewer/src/app/home/home.component.html
@@ -173,7 +173,7 @@
         More about our data
       </div>
       <div class="description">
-        <ng-container *ngIf="releaseVersion && releaseNotes && releaseNotes.length > 0">
+        <ng-container *ngIf="releaseVersion && releaseSummary && releaseSummary.length > 0">
           <a routerLink="/release-notes" class="link">Version {{releaseVersion}}</a> was released on {{releaseSummary[0].datePublished | date: "d MMMM y"}}.
         </ng-container>
         See our <a routerLink="/documentation" class="link">documentation</a> section for more info about
