--- a/sample-viewer/src/app/admin/release-notes/release-notes.component.html
+++ b/sample-viewer/src/app/admin/release-notes/release-notes.component.html
@@ -33,7 +33,7 @@
     <div *ngFor="let notes of release.description">
       <h4>{{ notes.endpoint }}</h4>
       <ul class="release">
-        <li *ngFor="let note of description.note">
+        <li *ngFor="let note of notes.note">
           {{ note }}
         </li>
       </ul>
