adjust updated tag formatting

--- a/sample-viewer/src/app/admin/privacy/privacy.component.html
+++ b/sample-viewer/src/app/admin/privacy/privacy.component.html
@@ -3,7 +3,7 @@
   <h1>Privacy Notice for data.cvisb.org</h1>
 
   <div class="updated">
-    updated: {{updated_date | date: 'd MMMM yyyy'}}
+    updated {{updated_date | date: 'd MMMM yyyy'}}
   </div>
 
   <section class="privacy about-text">
