--- a/sample-viewer/src/app/admin/terms/terms.component.html
+++ b/sample-viewer/src/app/admin/terms/terms.component.html
@@ -4,7 +4,7 @@
 
   <h1>Terms of Use</h1>
   <div class="updated">
-    updated: {{updated_date | date: 'd MMMM yyyy'}}
+    updated {{updated_date | date: 'd MMMM yyyy'}}
   </div>
 
   <section class="terms">
