--- a/sample-viewer/src/app/dataset-page/dataset-page.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="updated">
-          updated: {{dataset.dateModified ? (dataset.dateModified | date: 'd MMMM yyyy') : 'unknown'}}
+          updated {{dataset.dateModified ? (dataset.dateModified | date: 'd MMMM yyyy') : ': unknown'}}
         </div>
       </div>
 
