--- a/sample-viewer/src/app/footer/footer.component.html
+++ b/sample-viewer/src/app/footer/footer.component.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="updated">
-          data updated: {{ dataModified ? (dataModified | date: "d MMMM yyyy") : "unknown" }}
+          data updated {{ dataModified ? (dataModified | date: "d MMMM yyyy") : ": unknown" }}
         </div>
 
       </div>
