--- a/sample-viewer/src/app/patient-page/patient-hla/patient-hla.component.html
+++ b/sample-viewer/src/app/patient-page/patient-hla/patient-hla.component.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="updated">
-        updated: {{dateModified ? (dateModified | date: 'd MMMM yyyy') : 'unknown'}}
+        updated {{dateModified ? (dateModified | date: 'd MMMM yyyy') : 'unknown'}}
       </div>
 
       <div class="hla-data" *ngIf="alleleCount && alleleCount.length > 0">
