--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -21,7 +21,7 @@
       <div class="container patient-ids">
         <div class="container-column column-left">
           <div class="updated">
-            updated: {{patient.dateModified ? (patient.dateModified | date: 'd MMMM yyyy') : 'unknown'}}
+            updated {{patient.dateModified ? (patient.dateModified | date: 'd MMMM yyyy') : ': unknown'}}
           </div>
 
           <div class="altIDs">
