adjusting layout, adding private/embargoed icons

--- a/sample-viewer/src/app/patient-page/patient-demographics/patient-demographics.component.html
+++ b/sample-viewer/src/app/patient-page/patient-demographics/patient-demographics.component.html
@@ -31,11 +31,13 @@
 
 
 <div class="pregnant" *ngIf="patient.gender == 'Female'">
+  <i class="fas fa-lock private-icon" matTooltip="private data; do not share"></i>
   <span class="variable-label">pregnant:</span>
   <span class="variable-value">{{ patient.pregnant ? patient.pregnant : "unknown"}}</span>
 </div>
 
 <div class="occupation" *ngIf="patient.occupation">
+  <i class="fas fa-lock private-icon" matTooltip="private data; do not share"></i>
   <span class="variable-label">occupation:</span>
   <span class="variable-value">{{ patient.occupation }}</span>
 </div>
