add expansion panels

--- a/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.scss
+++ b/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.scss
@@ -11,7 +11,8 @@
 
 .header-label {
   color: $grey-400;
-  font-size: 1.25em;
+  // font-size: 1.25em;
+  font-size: 0.95em;
   text-transform: uppercase;
   text-align: center;
   padding: 3px;
