--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -610,8 +610,9 @@ th.mat-header-cell {
 .private-icon {
   background: $grey-225;
   padding: 5px;
-  color: $grey-500;
+  color: $grey-400;
   margin-right: 4px;
+  margin-bottom: 4px;
   border-radius: 4px;
 }
 
